fixed letter spacing

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -169,7 +169,6 @@ a {
 
 .carousel__container-right h2 {
   font-size: 1.8rem;
-  letter-spacing: 0;
   line-height: 1;
   color: #010;
   margin: 0;
