--- a/assets/scss/_main.scss
+++ b/assets/scss/_main.scss
@@ -113,7 +113,6 @@ a {
 
   h2 {
     font-size: 1.8rem;
-    letter-spacing: 0;
     line-height: 1;
     color: $blackColor;
     margin: 0;
